2003-08-28 Gustavo Niemeyer <niemeyer@conectiva.com>
	* modules/eval.py: Implemented a forking/timeout scheme to
	  protect against DoS evaluations. Now it should be possible
	  to give wider access to the module.

2003-08-27 Gustavo Niemeyer <niemeyer@conectiva.com>
	* modules/permissions.py: Implemented permission parameters.
	* modules/{remoteinfo.py,infopack.py}: Adapted to work with
	  premission parameters.
	* modules/infopack.py: Implemented infopack searching.
	* data/infopacks/rfc.info,contrib/rfcindex2info.py: Created
	  infopack with an RFC index.
	* data/infopacks/weather.info,contrib/icao2info.py: Created
	  infopack with weather station codes.
	* modules/weather.py: Implemented module using the
	  pymetar.py module for consulting NOAA weather information
	  from any station available there.

2003-08-26 Gustavo Niemeyer <niemeyer@conectiva.com>
	* pybot/misc.py: Introduced striphtml().
	* pybot/rss.py: Allow all news to be colapsed in one line.
	  Strip html from fields. Other minor changes and fixes.

2003-08-25 Gustavo Niemeyer <niemeyer@conectiva.com>
	* pybot/refrag.py: Introduced the refrag module. It contains
	  reusable "fragments" of regular expression patterns. It's
	  meant to reduce the number of times one has to code similar
	  patterns.
	* pybot/rss.py: Introduced generic RSS module! It's based on
	  Mark Pilgrim's "ultra liberal" parser, and allows one
	  to send news from any RSS feed to any user/channel/server.
	* QUICK_START: Added small startup tutorial.
	* modules/{help.py,infopack.py}: Integrated infopack help
	  into main help.

2003-08-24 Gustavo Niemeyer <niemeyer@conectiva.com>
	* pybot/misc.py,modules/help.py,modules/*: Now regular
	  expressions are using a single space, and misc.regexp()
	  and mm.register_help() convert them to \s+ and \s*.
	* pybot/misc.py: Fixed small issues on buildanswer().
	* pybot/{sqlite.db,__init__.py}: Improved SQLiteDB.table().
	  Now it handles spaces in the fields list gracefully